Added dynamic data for different cities

--- a/weather.html
+++ b/weather.html
@@ -28,6 +28,26 @@
         </div>
         <div class="weather">
             <div id="cityName">Delhi</div>
+            <span id="temp">28</span>
+            <span id="deg">°</span>
+            <span id="cel">C</span>
+            <span id="feels">REAL FEEL </span>
+            <span id="feelsLike">21</span>
+            <span id="degcel">°C</span>
+            <span id="time">00:00</span>
+            <span id="ampm"> AM</span>
+            <span id="wind">WIND : </span>
+            <span id="windval">5690</span>
+            <span id="km">km/hr</span>
+            <hr style="color:rgb(68, 67, 67);width:40%; position:absolute; right:4%; top:35%;">
+            <span id="humidity">HUMIDITY : </span>
+            <span id="humidval">5690</span>
+            <span id="percent">%</span>
+            <hr style="color:rgb(68, 67, 67);width:40%; position:absolute; right:4%; top:55%;">
+            <div id="aqi">AQI : </div>
+            <div id="aqival">VERY UNHEALTHY</div>
+            <hr style="color:rgb(68, 67, 67);width:40%; position:absolute; right:4%; top:75%;">
+             
         </div>
         <div class="weather2">
         </div>
