Added in dynamic aqi parameters

--- a/weatheraqi.html
+++ b/weatheraqi.html
@@ -35,11 +35,19 @@
         <div id="pm25card">
          
             <p id="pm25title">PM2.5</p>
+            <div id="pm25conc">Conc : <span id="pm25concval">100</span></div>
+            <hr style="color:rgb(68, 67, 67);width:80%; position:absolute; left:8.5%; top:41%;">
+            <div id="pm25aqi">AQI : <span id="pm25aqival">100</span></div>
+            <hr style="color:rgb(68, 67, 67);width:80%; position:absolute; left:8.5%; top:70%;">
 
         </div>
         <div id="pm10card">
           
             <p id="pm10title">PM10</p>
+            <div id="pm10conc">Conc : <span id="pm10concval">100</span></div>
+            <hr style="color:rgb(68, 67, 67);width:80%; position:absolute; left:8.5%; top:41%;">
+            <div id="pm10aqi">AQI : <span id="pm10aqival">100</span></div>
+            <hr style="color:rgb(68, 67, 67);width:80%; position:absolute; left:8.5%; top:70%;">
 
         </div>
     </div>
@@ -47,15 +55,31 @@
     <div class="parambox">
       <div id="coval">
         <p id="cotitle">CO</p>
+        <div id="coconc">Conc : <span id="coconcval">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:2.5%; top:30%;">
+        <div id="coaqi">AQI : <span id="coaqival">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:2.5%; top:50%;">
       </div>
       <div id="o3val">
         <p id="o3title">O₃</p>
+        <div id="o3conc">Conc : <span id="o3concval">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:28.5%; top:30%;">
+        <div id="o3aqi">AQI : <span id="o3aqival">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:28.5%; top:50%;">
       </div>
       <div id="no2val">
         <p id="no2title">NO₂</p>
+        <div id="no2conc">Conc : <span id="no2concval">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:54.5%; top:30%;">
+        <div id="no2aqi">AQI : <span id="no2aqival">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:54.5%; top:50%;">
       </div>
       <div id="so2val">
         <p id="so2title">SO₂</p>
+        <div id="so2conc">Conc : <span id="so2concval">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:80.5%; top:30%;">
+        <div id="so2aqi">AQI : <span id="so2aqival">100</span></div>
+        <hr style="color:rgb(68, 67, 67);width:17%; position:absolute; left:80.5%; top:50%;">
       </div>
     </div>
     <div class="precautions">
