--- a/weather.html
+++ b/weather.html
@@ -46,6 +46,7 @@
             <span id="humidity">HUMIDITY : </span>
             <span id="humidval">5690</span>
             <span id="percent">%</span>
+            <hr style="color:rgb(68, 67, 67);width:40%; position:absolute; right:4%; top:55%;">
             <div id="aqi">AQI : </div>
             <div id="aqival">VERY UNHEALTHY</div>
             <hr style="color:rgb(68, 67, 67);width:40%; position:absolute; right:4%; top:75%;">
