Added precautions for different aqi indexs.

--- a/weatheraqi.html
+++ b/weatheraqi.html
@@ -84,6 +84,10 @@
     </div>
     <div class="precautions">
       <div id="pretitle">Precautions</div>
+      <p id="risk">At risk population :</p>
+      <p id="riskstring">Enjoy your daily activies.</p>
+      <p id="norisk">General population :</p>
+      <p id="noriskstring">Enjoy your daily activies.</p>
   </div>
         <script src="weatheraqi.js"></script>
     </body>
