--- a/weatheraqi.html
+++ b/weatheraqi.html
@@ -15,7 +15,10 @@
                   </svg></button>
            
             <div class="bar1">
-                    <button id="home1">Home</button> 
+              <a href="weatherH.html">
+                <button id="home1">Home  </button>
+               </a>
+           
                     <a href="weather.html">
                         <button id="weatherbut1">Weather</button> 
                     </a>
