Added weather of common places and min,max temp

--- a/weather.html
+++ b/weather.html
@@ -54,8 +54,97 @@
             <hr style="color:rgb(68, 67, 67);width:40%; position:absolute; right:4%; top:75%;">
              
         </div>
-        <div class="weather2">
-        </div>
+        <div class="parambox">
+            <div id="cloudPct">
+              <p id="cloudtitle">Cloud PCT</p>
+              <div id="cloudpct">100</div>
+            </div>
+            <div id="minTemp">
+              <p id="mintemptitle">Min. Temp</p>
+              <div id="mintempdeg"> °</div>
+              <span id="mintempval">100</span>
+              <span id="Cel">C</span>
+            </div>
+            <div id="maxTemp">
+              <p id="maxtemptitle">Max. Temp</p>
+              <div id="maxtempdeg">°</div>
+              <span id="maxtempval">100</span>
+              <span id="Celmax">C</span>
+            </div>
+            <div id="windDeg">
+              <p id="winddegtitle">Wind degrees</p>
+              <div id="winddeg"><span id="winddegval">100</span></div>
+            </div>
+          </div>
+          <div class="weather2">
+            <p id="common">Weather Of Common Places</p>
+            <div class="headers">
+                <p id="placeh" style="font-weight:600;">Place</p>
+                <p id="temph" style="font-weight:600;">Temp</p>
+                <p id="feelsh" style="font-weight:600;">Real Feel</p>
+                <p id="minh" style="font-weight:600;">Min. Temp</p>
+                <p id="maxh" style="font-weight:600;">Max. Temp</p>
+                <p id="windh" style="font-weight:600;">Wind Speed</p>
+                <p id="sunrise" style="font-weight:600;">Sunrise</p>
+                <p id="sunset" style="font-weight:600;">Sunset</p>
+            </div>
+            <div class="places">
+                <p id="Tokyo" style="font-weight:600;">Tokyo</p>
+                <p id="Shanghai" style="font-weight:600;">Shanghai</p>
+                <p id="NewYork" style="font-weight:600;">New York</p>
+                <p id="NewDelhi" style="font-weight:600;">New Delhi</p>
+                <p id="London" style="font-weight:600;">London</p>
+            </div>
+            <div class="tempbox">
+                <p id="Tokyotemp">28</p>
+                <p id="Shanghaitemp">30</p>
+                <p id="NewYorktemp">31</p>
+                <p id="NewDelhitemp">30</p>
+                <p id="Londontemp">16</p>
+            </div>
+            <div class="mintempbox">
+                <p id="minTokyotemp">28</p>
+                <p id="minShanghaitemp">30</p>
+                <p id="minNewYorktemp">31</p>
+                <p id="minNewDelhitemp">30</p>
+                <p id="minLondontemp">16</p>
+            </div>
+            <div class="maxtempbox">
+                <p id="maxTokyotemp">28</p>
+                <p id="maxShanghaitemp">30</p>
+                <p id="maxNewYorktemp">31</p>
+                <p id="maxNewDelhitemp">30</p>
+                <p id="maxLondontemp">16</p>
+            </div>
+            <div class="feelbox">
+                <p id="Tokyofeel">28</p>
+                <p id="Shanghaifeel">30</p>
+                <p id="NewYorkfeel">31</p>
+                <p id="NewDelhifeel">30</p>
+                <p id="Londonfeel">16</p>
+            </div>
+            <div class="placewind">
+                <p id="Tokyowind">28</p>
+                <p id="Shanghaiwind">30</p>
+                <p id="NewYorkwind">31</p>
+                <p id="NewDelhiwind">30</p>
+                <p id="Londonwind">16</p>
+            </div>
+            <div class="placerise">
+                <p id="Tokyorise">28</p>
+                <p id="Shanghairise">30</p>
+                <p id="NewYorkrise">31</p>
+                <p id="NewDelhirise">30</p>
+                <p id="Londonrise">16</p>
+            </div>
+            <div class="placeset">
+                <p id="Tokyoset">28</p>
+                <p id="Shanghaiset">30</p>
+                <p id="NewYorkset">31</p>
+                <p id="NewDelhiset">30</p>
+                <p id="Londonset">16</p>
+            </div>
+          </div>
         <script src="weather.js"></script>
     </body>
 </html>
