--- a/weatherM.html
+++ b/weatherM.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="weatherM.css"/>
-        <title>Weather App</title>
+        <title>Lunar Info</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     </head>
