Added a weather facts page

--- a/weather.html
+++ b/weather.html
@@ -28,7 +28,7 @@
                 <button>Learn More</button>
                 <div class="content">
                     <a href="weatherM.html">Lunar Info</a>
-                    <a href="">Weather Facts</a>
+                    <a href="fact.html">Weather Facts</a>
                 </div>
             </div>
 
