--- a/weatherM.html
+++ b/weatherM.html
@@ -17,13 +17,13 @@
                 <a href="weatheraqi.html">
                     <button id="aqibuth">AQI</button>
                </a>
-               <div class="dropdown">
+               <!-- <div class="dropdown">
                 <button>Learn More</button>
                 <div class="content">
                     <a href="weatherM.html">Lunar Info</a>
                     <a href="">Weather Facts</a>
                 </div>
-            </div>
+            </div> -->
             
         </div>
         
@@ -87,7 +87,8 @@
     <img src="moon6.png" style="width:147px;height:147px;position: absolute;top:33%;left:6.5%;"/>
     <p id="wantext2"style="padding-top:17%;padding-left: 26%; padding-right:7%;padding-bottom: 0px;font-size:19.5px;">The Moon is nearly back to the point in its orbit where its dayside directly faces the Sun, and all that we see from our perspective is a thin curve.</p>
 </div>
-
+<p id="source" style="position: absolute;top:328%;font-size:16px;right:3%;">Source : NASA</p>
+<p id="source" style="position: absolute;top:331%;font-size:16px;right:3.5%;">PC : Flaticon</p>
         <script src="weatherM.js"></script>
     </body>
 </html>
