--- a/weatheraqi.html
+++ b/weatheraqi.html
@@ -46,7 +46,7 @@
                       <button>Learn More</button>
                       <div class="content">
                           <a href="weatherM.html">Lunar Info</a>
-                          <a href="">Weather Facts</a>
+                          <a href="fact.html">Weather Facts</a>
                       </div>
                   </div>
       
